tests/e2e/semantics/mutation_block.story
{"a": 1} get key: "b"
